tests/baselines/reference/asyncFunctionDeclaration10_es6.errors.txt
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration10_es6.ts(1,30): error TS1109: Expression expected.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration10_es6.ts(1,33): error TS1138: Parameter declaration expected.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration10_es6.ts(1,38): error TS1005: ';' expected.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration10_es6.ts(1,39): error TS1128: Declaration or statement expected.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration10_es6.ts(1,53): error TS1109: Expression expected.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration10_es6.ts(1,1): error TS1057: An async function or method must have a valid awaitable return type.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration10_es6.ts(1,16): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration10_es6.ts(1,20): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration10_es6.ts(1,33): error TS2304: Cannot find name 'await'.


==== tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration10_es6.ts (9 errors) ====
    async function foo(a = await => await): Promise<void> {
                                 ~~
!!! error TS1109: Expression expected.
                                    ~~~~~
!!! error TS1138: Parameter declaration expected.
                                         ~
!!! error TS1005: ';' expected.
                                          ~
!!! error TS1128: Declaration or statement expected.
                                                        ~
!!! error TS1109: Expression expected.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1057: An async function or method must have a valid awaitable return type.
                   ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
                       ~~~~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
                                    ~~~~~
!!! error TS2304: Cannot find name 'await'.
    }